finished tests for service layer and controllers